# simplesock

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  allocators.cpp  allocators.h  constants.h  main.cpp  pool.cpp  pool.h  socklib.cpp  socklib.h  socklib_generic.cpp  socklib_posix.cpp  socklib_win32.cpp  strlcpy.cpp  tests.cpp  tests.h  udp_client.h
.github/workflows/: cmake-multi-platform.yml
